Removed console on offline box, updated styles on console to *not* scale, fixed styles to canvas so overflow from standard wrap still applies style around canvas.

--- a/public/styles/account.css
+++ b/public/styles/account.css
@@ -1287,17 +1287,14 @@ td.last a .icon {
 }
 
 .console-container {
-	background-color: #EEE;
-	border-radius: 5px;
-	overflow: hidden;
 	margin-top: 50px;
-	padding: 25px;
 }
 
 .console-container canvas {
-	width: 100%;
+	padding: 20px;
+	background-color: #EEE;
+	border-radius: 5px;
 }
-
 
 @-webkit-keyframes flash {
 	0% { opacity: 1; }
